# sqd-nqs-12bit

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT_PLAN.md  NQS-SQD-Qiskit.ipynb  README.md  nqs_sqd_qiskit.py  plan.md  pyproject.toml
.claude/agents/: competition-master.md  ensemble-optimizer.md  parallel-trainer.md
.claude/commands/: nqs-theory-review.md  plan-new-experiment.md
.claude/skills/experiment-report-writer/: SKILL.md
.claude/skills/nqs-sqd-research/: SKILL.md
configs/: ablation_config.yaml  h2_12bit_baseline.yaml  h2_12bit_nqs.yaml  lih_12bit_ablation.yaml
notebooks/: 001_theory_sanity.ipynb
results/: EXPERIMENT_SUMMARY.md
results/ablation/: H2_ablation_20251128_022150.json  LiH_ablation_20251128_023114.json
results/epoch_sweep/: LiH_epoch_sweep_20251128_022842.json
results/figures/: experiment_report.md  experiment_summary.csv
results/phase_diagram/: all_results_20251128_031018.json  all_results_20251128_034833.json  all_results_20251128_060054.json  phase_1_1_nqs_quality_20251128_032507.json  phase_1_2_sample_scan_20251128_034833.json  phase_3_h6_chain_20251128_065313.json
scripts/: generate_missing_figures.py  generate_phase_diagram.py  hackmd_sync.py  plot_results.py  run_full_research_plan.py
src/: __init__.py
src/experiments/: __init__.py  ablation_nqs_vs_baseline.py  h2_12bit_small_sample.py  h_chain_scaling.py
src/nqs_models/: __init__.py  ffn_nqs.py  gpu_optimized.py  utils.py  vmc_training.py
src/sqd_interface/: __init__.py  hamiltonian.py  sampling_adapters.py  sqd_runner.py
